tests/snapshots/parser_error_fixtures/missing_class_method_name.snap
---
source: tests/parser_error_fixtures_snapshots.rs
---
Fixture: examples/parser_errors/missing_class_method_name.flx
== compile ==
failed (parse)
== diagnostics ==
error[E034]: Missing Method Name

Expected method name after `fn` in class declaration.

  examples/parser_errors/missing_class_method_name.flx:8:8
  |
8 |     fn (x: a) -> Int
  |        ^

Hint:
  Class methods use `fn name(x: a, y: a) -> ReturnType`.
== stdout ==
<not executed>
